# ultrafast_laser_process_decision_agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  deep-research-report.md  docker-compose.prod.yml  docker-compose.yml  project9_ultrafast_laser_process_decision_agent.md  requirements.txt  激光加工多表数据的相关性与机理分析报告.md
.run/: Docker Compose Down.run.xml  Docker Compose Up.run.xml
.workflow/: main-docker-deploy.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py  schemas.py  settings.py
apps/api/app/routers/: data_management.py  datasets.py  feedback.py  recommendations.py
apps/api/app/services/: data_loader.py  feedback.py  recommender.py
apps/api/tests/: test_api.py  test_data_loader.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  (+1 more)
configs/: feature_flags.yaml  objectives.yaml  providers.yaml
data/raw/: 4H碳化硅实验数据.xlsx  BF33实验数据.xlsx  微晶玻璃数据集.xlsx  金刚石实验结果.xlsx  高温合金数据集.xlsx
docs/: API_CONTRACTS.md  DATA_SCHEMA.md  OBJECTIVES.md  PROJECT_PLAN.md  data_cleaning_rules.md  issue_feedback_loop.md
docs/examples/: experiment_feedback_template.txt
experiments/实验数据反馈日志/: 2026 05 08 4H碳化硅.txt  2026 05 15 BF33.txt  2026 05 15 微晶玻璃.txt  2026 05 15 金刚石.txt  2026 05 26 BF33.txt  2026 05 26 BF33（2）.txt  2026 05 26 BF33（3）.txt  2026 05 26 BF33（4）.txt  2026 5 15 BF33.txt  2026 5 15 微晶玻璃.txt  2026 5 15 金刚石.txt  2026 5 22 高温合金.txt  2026 5 8 4H碳化硅.txt
scripts/: auto-feedback-logger.py  clean_raw_data.py  compose-up.ps1
(+14 files in other folders)
