[project]
name = "laser-process-decision-api"
version = "0.1.0"
description = "FastAPI backend for ultrafast laser process decision MVP."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
